# scale-buddy

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  setup.cfg  setup.py
scale-buddy/: __init__.py  scales.py
scale_buddy/: __init__.py  main.py  scale_buddy.py  scales.py
scales/: major_scale_test.go  minor_scale_test.go  pentatonic_scale_test.go  scales.go  scales_suite_test.go
tests/scales/major/: test_major.py  test_major_scale.py
tests/scales/minor/harmonic/: test_harmonic_minor.py  test_harmonic_scale.py
tests/scales/minor/melodic/: test_melodic_minor.py
tests/scales/minor/natural/: test_natural_minor.py  test_natural_scale.py
tests/scales/pentatonic/major/: test_major_pentatonic.py
tests/scales/pentatonic/minor/: test_minor_pentatonic.py
