[metadata]
name = Scale Buddy
author = Benjamin Toll
author_email = benjam72@yahoo.com
version = 0.1
description = Scale buddy, scale buddy, more than meets the eye!
url = http://github.com/btoll/music_buddy/scale_buddy
license = GPLv3+

[options]
packages = scale_buddy
entry_points =
    [console_scripts]
    scale_buddy = scale_buddy:main

